--- a/ruby/classwork/blog/app/views/authors/new.html.erb
+++ b/ruby/classwork/blog/app/views/authors/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <% content_for :title, "New Author" %>
 
-<h1>New author</h1>
+<h1>New Author</h1>
 
 <%= render "form", author: @author %>
 
