--- a/ruby/classwork/blog/app/views/authors/show.html.erb
+++ b/ruby/classwork/blog/app/views/authors/show.html.erb
@@ -14,7 +14,7 @@
       <div class="row mt-3">
 <div class="col-12 text-center">
   <%= link_to "Edit Author", edit_author_path(@author), class: "btn btn-secondary btn-sm mx-1" %> 
-  <%= link_to "Delete Article", author_path(@author), class: "btn btn-danger btn-sm mx-1", data: { 
+  <%= link_to "Delete Author", author_path(@author), class: "btn btn-danger btn-sm mx-1", data: { 
                     turbo_method: :delete,
                     turbo_confirm: "Are you sure?"
                   } %>
