--- a/ruby/classwork/blog/app/views/categories/index.html.erb
+++ b/ruby/classwork/blog/app/views/categories/index.html.erb
@@ -1,32 +1,35 @@
-
 <p style="color: green"><%= notice %></p>
 
 <div class="container">
-
-<div class="bg-light py-5 mb-4">
-  <div class="container-fluid">
-    <h1 class="display-4">Categories</h1>
-    <p class="lead">Click on a category to see all related articles or create a new one.</p>
-    <hr class="my-4">
-    <p>
-      <%= link_to "Create a New Category", new_category_path, class: "btn btn-primary btn-lg" %>
-    </p>
+  <div class="bg-light py-5 mb-4">
+    <div class="container-fluid">
+      <h1 class="display-4">Categories</h1>
+      <p class="lead">Click on a category to see all related articles or create a new one.</p>
+      <hr class="my-4">
+      <p>
+        <%= link_to "Create a New Category", new_category_path, class: "btn btn-primary btn-lg" %>
+      </p>
+    </div>
   </div>
+
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+    <% @categories.each do |category| %>
+      <div class="col">
+        <div class="card h-100">
+        <% if category.image.attached? %>
+        <%= image_tag category.image, alt: category.name, class: "img-fluid float-start" %>
+        <% end %>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><%= category.name %></h5>
+            <p class="card-text">
+              <%= category.description.present? ? truncate(category.description, length: 100) : "No description available." %>
+            </p>
+            <p class="mt-auto">
+              <%= link_to "View Articles (#{category.articles.count})", category_path(category), class: "btn btn-primary" %>
+            </p>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
-
-<ul class="list-group">
-  <% @categories.each do |category| %>
-    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-      <%= link_to "#{category.name}", category, class: "text-decoration-none" %>
-      <span class="badge bg-primary rounded-pill">
-        <%= category.articles.count %>
-      </span>
-    </li>
-  <% end %>
-</ul>
-
-
 </div>
-
-
-
