--- a/ruby/classwork/blog/app/assets/stylesheets/application.css
+++ b/ruby/classwork/blog/app/assets/stylesheets/application.css
@@ -18,11 +18,31 @@
 /* List Group Styles */
 
 .leave-comment {
-    background-color: #535353; /* Dark grey background */
-    color: #ffffff; /* White text for readability */
-    padding: 20px; /* Add padding around comments */
-    border-radius: 10px; /* Rounded corners */
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Add a shadow for depth */
-  }
-  
-  
+  background-color: #535353; /* Dark grey background */
+  color: #ffffff; /* White text for readability */
+  padding: 20px; /* Add padding around comments */
+  border-radius: 10px; /* Rounded corners */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Add a shadow for depth */
+}
+
+.author-img-container {
+  display: flex;
+  justify-content: center; /* Horizontal alignment */
+  align-items: center;    /* Vertical alignment */
+  height: 100%;           /* Ensures it takes full height of its parent */
+}
+
+.author-img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;      /* Ensures the image maintains aspect ratio */
+}
+
+
+.category-img {
+  width: 100%;         
+  height: 50%;        
+  object-fit: cover;   
+  border-radius: 5px 5px 0px 0px;  /* Optional: Rounded corners */
+}
+
