--- a/ruby/classwork/blog/app/views/categories/index.html.erb
+++ b/ruby/classwork/blog/app/views/categories/index.html.erb
@@ -17,7 +17,7 @@
       <div class="col">
         <div class="card h-100">
         <% if category.image.attached? %>
-        <%= image_tag category.image, alt: category.name, class: "img-fluid float-start" %>
+        <%= image_tag category.image, alt: category.name, class: "img-fluid float-start category-img" %>
         <% end %>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title"><%= category.name %></h5>
