--- a/ruby/classwork/blog/app/views/layouts/application.html.erb
+++ b/ruby/classwork/blog/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title><%= content_for(:title) || "Blog" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= yield :head %>
@@ -13,8 +13,13 @@
     <link rel="apple-touch-icon" href="/icon.png">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><%= javascript_importmap_tags %>
-  </head>
+    <script src="https://js.stripe.com/v3/"></script>
+    </head>
   <body>
+ <!-- <% if controller_name == "donations" && (action_name == "new" || action_name == "create") %>
+  <%= javascript_include_tag "donation", type: "module" %>
+<% end %> -->
+
     <div class="container">
   <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
   <nav class="navbar navbar-expand-lg">
@@ -33,6 +38,9 @@
         </li>
         <li class="nav-item">
          <%= link_to "Authors", authors_path, class: "nav-link active"%>
+      </li>
+      <li class="nav-item">
+         <%= link_to "Donate!", new_donation_path, class: "nav-link active"%>
       </li>
     </div>
   </div>
