--- a/ruby/classwork/blog/app/views/authors/index.html.erb
+++ b/ruby/classwork/blog/app/views/authors/index.html.erb
@@ -17,7 +17,7 @@
   <% @authors.each do |author| %>
     <div class="col-md-4 mb-4">
       <!-- Card with fixed width and responsive design -->
-      <div class="card h-100 d-flex flex-column">
+      <div class="card h-100 d-flex flex-column author-card">
         <div class="row g-0 h-100">
           <div class="col-md-4">
           <div class="author-img-container">
