--- a/ruby/classwork/blog/app/views/articles/index.html.erb
+++ b/ruby/classwork/blog/app/views/articles/index.html.erb
@@ -14,32 +14,40 @@
   </div>
   <!-- Display articles in a grid layout -->
   <div class="row">
-  <% @articles.each do |article| %>
-    <% unless article.archived? %>
-      <div class="col-md-4 mb-4">
-        <!-- Card with d-flex and flex-column for equal height -->
-        <div class="card d-flex flex-column h-100">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">
-              <%= content_tag :span, article.title, class: "text-decoration-none" %>
-              <% if article.category %>
-                <%= content_tag :span, article.category.name, class: "float-end text-muted small" %>
+    <% @articles.each do |article| %>
+      <% unless article.archived? %>
+        <div class="col-md-4 mb-4">
+          <!-- Cards with a equal height -->
+          <div class="card d-flex flex-column h-100 article-card">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">
+                <%= content_tag :span, article.title, class: "text-decoration-none" %>
+                <!-- Category top right of the card -->
+                <% if article.category %>
+                  <%= content_tag :span, article.category.name, class: "float-end text-muted small" %>
+                <% end %>
+              </h5>
+              <% if article.author %>
+                <p class="card-text">
+                  <span>
+                    <i class="fas fa-user text-primary"></i> 
+                    <%= article.author.name %>
+                  </span>
+                  <br>
+                  <span>
+                    <i class="fas fa-calendar-alt text-success"></i>
+                    <%= article.created_at.strftime("%B %d, %Y") %> 
+                  </span>
+                </p>
               <% end %>
-            </h5>
-            <% if article.author %>
-              <p class="card-text">
-                <strong>Author:</strong> <%= article.author.name %>
-                <br>
-                <strong>Bio:</strong> <%= truncate(article.author.bio, length: 100) %> 
-              </p>
-            <% end %>
-            <!-- Read more button positioned at the bottom -->
-            <div class="mt-auto">
-              <%= link_to "Read More", article_path(article), class: "btn btn-light" %>
+              <!-- Read more button positioned at the bottom -->
+              <div class="mt-auto">
+                <%= link_to "Read More", article_path(article), class: "btn btn-light" %>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
 </div>
