--- a/ruby/classwork/blog/app/views/layouts/application.html.erb
+++ b/ruby/classwork/blog/app/views/layouts/application.html.erb
@@ -13,40 +13,47 @@
     <link rel="apple-touch-icon" href="/icon.png">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><%= javascript_importmap_tags %>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src="https://js.stripe.com/v3/"></script>
-    </head>
+  </head>
   <body>
- <!-- <% if controller_name == "donations" && (action_name == "new" || action_name == "create") %>
-  <%= javascript_include_tag "donation", type: "module" %>
-<% end %> -->
-
     <div class="container">
-  <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-  <nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <%= link_to "Home", root_path, class: "navbar-brand"%>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to "Categories", categories_path, class: "nav-link active"%>
-        </li>
-        <li class="nav-item">
-           <%= link_to "Articles", articles_path, class: "nav-link active"%>
-        </li>
-        <li class="nav-item">
-         <%= link_to "Authors", authors_path, class: "nav-link active"%>
-      </li>
-      <li class="nav-item">
-         <%= link_to "Donate!", new_donation_path, class: "nav-link active"%>
-      </li>
+      <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <%= link_to "Home", root_path, class: "navbar-brand"%>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <%= link_to "Categories", categories_path, class: "nav-link active"%>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Articles", articles_path, class: "nav-link active"%>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Authors", authors_path, class: "nav-link active"%>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Donate!", new_donation_path, class: "nav-link active"%>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </nav>
+
+      <!-- Display the flash notice message -->
+      <% if flash[:notice] %>
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <%= flash[:notice] %>
+          </div>
+      <% end %>
+
+      <%= yield %>
     </div>
-  </div>
-</nav>
-</nav>
-</div>
-    <%= yield %>
-  </body>
+
+</body>
 </html>
