Fixed stripe.js module not being loaded properly

--- a/ruby/classwork/blog/app/views/donations/new.html.erb
+++ b/ruby/classwork/blog/app/views/donations/new.html.erb
@@ -4,6 +4,8 @@
   </script>
   <%end%>
 
+<script src="https://js.stripe.com/v3/"></script>
+
 <div class="container mt-2">
 
   <h1 class="mb-4">Support Our Blog!</h1>
