Right-aligned sign in/out navbar

--- a/ruby/classwork/blog/app/assets/stylesheets/application.css
+++ b/ruby/classwork/blog/app/assets/stylesheets/application.css
@@ -55,3 +55,6 @@
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Add shadow to create a "lifted" effect */
   cursor: pointer; /* Change cursor to indicate it's clickable */
 }
+.sign-right {
+  text-align: right;
+}
