--- a/ruby/classwork/blog/app/views/pages/_header.html.erb
+++ b/ruby/classwork/blog/app/views/pages/_header.html.erb
@@ -1,31 +1,26 @@
-<div class="container">
-  <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <%= link_to "Home", root_path, class: "navbar-brand"%>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <!-- Left-aligned links -->
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <%= link_to "Categories", categories_path, class: "nav-link active"%>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Articles", articles_path, class: "nav-link active"%>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Authors", authors_path, class: "nav-link active"%>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Donate!", new_donation_path, class: "nav-link active"%>
-            </li>
-          </ul>
-
-          <!-- Right-aligned links -->
-          <ul class="navbar-nav"> 
-            <% if user_signed_in? %>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+     <%= link_to "Home", root_path, class: "navbar-brand"%>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+      <li class="nav-item">
+      <%= link_to "Categories", categories_path, class: "nav-link active"%>
+    </li>
+    <li class="nav-item">
+      <%= link_to "Articles", articles_path, class: "nav-link active"%>
+    </li>
+    <li class="nav-item">
+      <%= link_to "Authors", authors_path, class: "nav-link active"%>
+    </li>
+    <li class="nav-item">
+      <%= link_to "Donate!", new_donation_path, class: "nav-link active"%>
+    </li>
+      </ul>
+      <ul class="navbar-nav">
+        <% if user_signed_in? %>
               <li class="nav-item">
                 <%= link_to "Edit Profile", edit_user_registration_path, class: "nav-link" %>
               </li>
@@ -40,9 +35,7 @@
                 <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
               </li>
             <% end %>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </nav>
-</div>
+      </ul>
+    </div>
+  </div>
+</nav>
