Sign In/Out/Up & Edit Working

--- a/ruby/classwork/blog/app/views/layouts/application.html.erb
+++ b/ruby/classwork/blog/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 <!-- JavaScript -->
 <%= javascript_importmap_tags %>
 <script src="https://js.stripe.com/v3/"></script>
-<%= javascript_include_tag "turbo", type: "module" %> <!--Donate page won't load Stripe with this -->
+ <!--Donate page won't load Stripe with this -->
 
 </head>
   <body>
