--- a/ruby/classwork/blog/app/views/pages/_header.html.erb
+++ b/ruby/classwork/blog/app/views/pages/_header.html.erb
@@ -22,17 +22,17 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to "Edit Profile", edit_user_registration_path, class: "nav-link" %>
+                <%= button_to "Edit Profile", edit_user_registration_path, class: "nav-link" %>
               </li>
               <li class="nav-item">
-                <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
+                <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+                <%= button_to "Sign Up", new_user_registration_path, class: "nav-link" %>
               </li>
               <li class="nav-item">
-                <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
+                <%= button_to "Sign In", new_user_session_path, class: "nav-link" %>
               </li>
             <% end %>
       </ul>
