Fixed Delete Author, Article, Category bug, No more turbo

--- a/ruby/classwork/blog/app/views/articles/index.html.erb
+++ b/ruby/classwork/blog/app/views/articles/index.html.erb
@@ -28,7 +28,7 @@
               <% if article.author %>
                 <p class="card-text">
                   <span>
-                    <i class="fas fa-user text-primary"></i> 
+                    <i class="fa-solid fa-user text-primary"></i> 
                     <%= article.author.name %>
                   </span>
                   <br>
