--- a/ruby/classwork/blog/app/views/authors/show.html.erb
+++ b/ruby/classwork/blog/app/views/authors/show.html.erb
@@ -11,11 +11,9 @@
       <p><%= @author.bio %></p>
       <div class="row mt-3">
 <div class="col-12 text-center">
-  <%= link_to "Edit Author", edit_author_path(@author), class: "btn btn-secondary btn-sm mx-1" %> 
-  <%= link_to "Delete Author", author_path(@author), class: "btn btn-danger btn-sm mx-1", data: { 
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %>
+  <%= link_to "Edit", edit_author_path(@author), class: "btn btn-secondary btn-sm mx-1" %> 
+  <%= button_to "Delete", @author, method: :delete, class: "btn btn-danger btn-sm mx-1",  
+                form: { style: "display: inline;" }  %>
 </div>
 </div>
 
