--- a/ruby/classwork/blog/app/views/authors/edit.html.erb
+++ b/ruby/classwork/blog/app/views/authors/edit.html.erb
@@ -1,7 +1,6 @@
-<div class="container">
 <% content_for :title, "Edit Author" %>
 
-<h1>Editing author</h1>
+<h1>Edit Author</h1>
 
 <%= render "form", author: @author %>
 
@@ -14,5 +13,3 @@
       <%= link_to "Show This Author",  @author, class: "btn btn-outline-success btn-sm mx-1" %>
     </div>
   </div>
-
-</div>
