--- a/ruby/classwork/blog/app/views/authors/show.html.erb
+++ b/ruby/classwork/blog/app/views/authors/show.html.erb
@@ -1,37 +1,36 @@
-<div class="container">
 <h1><%= @author.name %></h1>
- <div class="row">
-    <div class="col-md-2">
-      <% if @author.image.attached? %>
-        <%= image_tag @author.image, alt: @author.name, class: "img-fluid float-start" %>
-      <% end %>
-    </div>
 
-    <div class="col-md-8">
-      <p><%= @author.bio %></p>
-      <div class="row mt-3">
-<div class="col-12 text-center">
-  <%= link_to "Edit", edit_author_path(@author), class: "btn btn-secondary btn-sm mx-1" %> 
-  <%= button_to "Delete", @author, method: :delete, class: "btn btn-danger btn-sm mx-1",  
-                form: { style: "display: inline;" }  %>
-</div>
-</div>
-
-    </div>
-    
+<div class="row">
+  <div class="col-md-2">
+    <% if @author.image.attached? %>
+      <%= image_tag @author.image, alt: @author.name, class: "img-fluid float-start" %>
+    <% end %>
   </div>
 
-  <h2>Articles by <%= @author.name %>:</h2>
+  <div class="col-md-8">
+    <p><%= @author.bio %></p>
+    
+    <!-- Action Buttons -->
+    <div class="row mt-3">
+      <div class="col-12 text-center">
+        <%= link_to "Edit", edit_author_path(@author), class: "btn btn-secondary btn-sm mx-1" %>
+        <%= button_to "Delete", @author, method: :delete, class: "btn btn-danger btn-sm mx-1", form: { style: "display: inline;" } %>
+      </div>
+    </div>
+  </div>
+</div>
 
-  <% if @articles.any? %>
-    <ul class="list-group">
-      <% @articles.each do |article| %>
-        <li class="list-group-item list-group-item-action">
-          <%= link_to article.title, article_path(article), class: "text-decoration-none" %>
-        </li>
-      <% end %>
-    </ul>
-  <% else %>
-    <p>This author has not written any articles yet.</p>
-  <% end %>
-  
+<h2>Articles by <%= @author.name %>:</h2>
+
+<% if @articles.any? %>
+  <ul class="list-group">
+    <% @articles.each do |article| %>
+      <li class="list-group-item list-group-item-action">
+        <%= link_to article.title, article_path(article), class: "text-decoration-none" %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>This author has not written any articles yet.</p>
+<% end %>
+
