--- a/ruby/classwork/blog/app/views/categories/show.html.erb
+++ b/ruby/classwork/blog/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
-<div class="container mt-4">
-  <!-- Category Header -->
+<div class="mt-4">
+  <!-- Category Name -->
   <div class="row">
     <div class="col-12 text-center">
       <h2 class="display-5"><%= @category.name %></h2>
@@ -61,7 +61,7 @@
   </div>
 
   <!-- Navigation Links -->
-  <div class="row mt-4">
+  <div class="row mt-4 mb-4">
     <div class="col-12 text-center">
       <%= link_to 'Back to Categories', categories_path, class: "btn btn-outline-primary btn-sm mx-1" %>
       <%= link_to 'Create New Article', new_article_path, class: "btn btn-outline-success btn-sm mx-1" %>
