--- a/ruby/classwork/blog/app/views/categories/index.html.erb
+++ b/ruby/classwork/blog/app/views/categories/index.html.erb
@@ -1,33 +1,33 @@
-<div class="container">
-  <div class="bg-light py-5 mb-4">
-    <div class="container-fluid">
-      <h1 class="display-4">Categories</h1>
-      <p class="lead">Click on a category to see all related articles or create a new one.</p>
-      <hr class="my-4">
-      <p>
-        <%= link_to "Create a New Category", new_category_path, class: "btn btn-primary btn-lg" %>
-      </p>
-    </div>
-  </div>
-
-  <div class="row row-cols-1 row-cols-md-2 g-4">
-    <% @categories.each do |category| %>
-      <div class="col">
-        <div class="card h-100">
-        <% if category.image.attached? %>
-        <%= image_tag category.image, alt: category.name, class: "img-fluid float-start category-img" %>
-        <% end %>
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title"><%= category.name %></h5>
-            <p class="card-text">
-              <%= category.description.present? ? truncate(category.description, length: 100) : "No description available." %>
-            </p>
-            <p class="mt-auto">
-              <%= link_to "View Articles (#{category.articles.count})", category_path(category), class: "btn btn-primary" %>
-            </p>
-          </div>
-        </div>
-      </div>
-    <% end %>
+<div class="bg-light py-5 mb-4">
+  <div class="container-fluid">
+    <h1 class="display-4">Categories</h1>
+    <p class="lead">Click on a category to see all related articles or create a new one.</p>
+    <hr class="my-4">
+      <p class="lead">Our blog has <%= Category.count %> categories and counting!</p>
+    <p>
+      <%= link_to "Create a New Category", new_category_path, class: "btn btn-primary btn-lg" %>
+    </p>
   </div>
 </div>
+
+<div class="row row-cols-1 row-cols-md-2 g-4 mb-4">
+  <% @categories.each do |category| %>
+    <div class="col">
+      <div class="card h-100">
+      <% if category.image.attached? %>
+      <%= image_tag category.image, alt: category.name, class: "img-fluid float-start category-img" %>
+      <% end %>
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title"><%= category.name %></h5>
+          <p class="card-text">
+            <%= category.description.present? ? truncate(category.description, length: 100) : "No description available." %>
+          </p>
+          <p class="mt-auto">
+            <%= link_to "View Articles (#{category.articles.count})", category_path(category), class: "btn btn-primary" %>
+          </p>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
+
