--- a/ruby/classwork/blog/app/views/devise/registrations/new.html.erb
+++ b/ruby/classwork/blog/app/views/devise/registrations/new.html.erb
@@ -36,7 +36,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up",  class: 'btn btn-primary mt-4 mb-2'  %>
   </div>
 <% end %>
 
