Added jQuery functionality, slideToggle Uses jQuery, Load More Comments - In Progress

--- a/ruby/classwork/blog/app/views/comments/_form.html.erb
+++ b/ruby/classwork/blog/app/views/comments/_form.html.erb
@@ -1,5 +1,6 @@
-<%= form_with model: [ article, article.comments.build ] do |form| %>
-<div class="mb-3">
+<!-- prevent the default form submission -->
+<%= form_with(model: [article, article.comments.build], local: false, html: { id: 'comment-form' }) do |form| %>
+  <div class="mb-3">
     <!-- Commenter Field -->
     <%= form.label :commenter, "Name", class: "form-label" %>
     <%= form.text_field :commenter, class: "form-control" %>
