--- a/ruby/classwork/blog/app/views/articles/show.html.erb
+++ b/ruby/classwork/blog/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :javascript do %>
   <script type="module">
-    import "article";
+    import "add_jquery";
   </script>
   <% end %>
   
@@ -22,26 +22,36 @@
 
       <!-- Comments -->
       <div class="row">
-        <div class="col-lg-6">
-          <h2>Comments</h2>
-          <%= render @article.comments %>
-        </div>
-        <div class="col-md-auto">
-        </div>
-        
-        <div class="col-lg-5 ">
-          <div class="leave-comment">
-            <h2>Leave a Comment:</h2>
-            <%= render "comments/form", article: @article %>
-          </div>
-        </div>
-      </div>
+  <div class="col-lg-6">
+    <h2>Comments</h2>
+    <!-- Container for dynamically loaded comments -->
+    <div id="comments">
+      <%= render @article.comments %> <!-- Initial comments rendered here -->
     </div>
+    // <%= debug(@article.category) %>
+    <button id="load-comments" 
+        data-article="<%= @article.id %>" 
+        data-category="<%= @article.category.id %>" 
+        class="btn btn-primary">
+  Load More Comments
+</button>
+  </div>
+  <div class="col-md-auto">
+  </div>
+  
+  <div class="col-lg-5">
+    <div class="leave-comment">
+      <h2>Leave a Comment:</h2>
+      <%= render "comments/form", article: @article %>
+    </div>
+  </div>
+</div>
+
   
     <!-- Buttons Section -->
     <div class="row mt-3">
       <div class="col-12 text-center">
-        <button type="button" class="btn btn-primary btn-sm mx-1" id="toggle">Hide</button>
+        <button type="button" class="btn btn-primary btn-sm mx-1" id="toggle">Hide Content</button>
         <%= link_to "Edit", edit_article_path(@article), class: "btn btn-secondary btn-sm mx-1" %>
         <%= button_to "Delete", @article, redirect_to: @articles, method: :delete, class: "btn btn-danger btn-sm mx-1",  
                 form: { style: "display: inline;" }  %>
