--- a/ruby/classwork/blog/app/views/comments/_comment.html.erb
+++ b/ruby/classwork/blog/app/views/comments/_comment.html.erb
@@ -12,7 +12,7 @@
       </p>
 
       <!-- Delete Button -->
-      <%= button_to "Delete", @comment, method: :delete, class: "btn btn-danger btn-sm mx-1" %>
+      <%= button_to "Delete", article_comment_path(@article, comment), method: :delete, class: "btn btn-danger btn-sm mx-1" %>
 
     
     </div>
