--- a/ruby/classwork/blog/app/views/layouts/application.html.erb
+++ b/ruby/classwork/blog/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
 
 <!-- JavaScript -->
 <%= javascript_importmap_tags %>
-<script src="https://js.stripe.com/v3/"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
   <body>
     <%= render "pages/header" %>
