--- a/ruby/classwork/blog/app/javascript/donation.js.erb
+++ b/ruby/classwork/blog/app/javascript/donation.js.erb
@@ -40,12 +40,12 @@ document.addEventListener("DOMContentLoaded", () => {
     #   }
     # });
 
-    $('#recurring-checkbox').on('change', function() {
-      if ($(this).is(':checked')) {
-        $('#recurring-description').show();
-      } else {
-        $('#recurring-description').hide();
-      }
+    # $('#recurring-checkbox').on('change', function() {
+    #   if ($(this).is(':checked')) {
+    #     $('#recurring-description').show();
+    #   } else {
+    #     $('#recurring-description').hide();
+    #   }
 
 
   });
