Modified Edit Profile, Removed article/user association, Minor Styling Changes

--- a/ruby/classwork/blog/app/views/pages/_header.html.erb
+++ b/ruby/classwork/blog/app/views/pages/_header.html.erb
@@ -21,15 +21,15 @@
       </ul>
       <ul class="navbar-nav">
         <% if user_signed_in? %>
-        <li class="nav-item dropdown">
+        <li class="nav-item btn-group">
           <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             <%=current_user.username %>
           </button>
-          <ul class="dropdown-menu dropdown-menu-dark">
-            <li><%= button_to edit_user_registration_path, method: :get, class: "dropdown-item" do%>
-              <i class="fas fa-pen-to-square"></i> Edit Profile
+          <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
+            <li><%= button_to edit_user_registration_path, method: :get, class: "dropdown-item text-center" do%>
+              <i class="fas fa-pen-to-square"></i> Account Profile
               <% end %></li>
-              <li><%= button_to destroy_user_session_path, method: :delete, class: "dropdown-item"  do %>
+              <li><%= button_to destroy_user_session_path, method: :delete, class: "dropdown-item text-center"  do %>
                 <i class="fas fa-right-from-bracket"></i> Sign Out
               <% end %></li>
           </ul>
