--- a/ruby/classwork/blog/app/views/devise/registrations/edit.html.erb
+++ b/ruby/classwork/blog/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,21 @@
 <div class="container">
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Account Profile</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="mb-3">
+  <%= f.label :first_name, class: "form-label" %><br />
+  <%= f.text_field :first_name, autofocus: true, autocomplete: true, class: "form-control"  %>
+</div>
+ <div class="mb-3">
+  <%= f.label :last_name, class: "form-label" %><br />
+  <%= f.text_field :last_name , class: "form-control"  %>
+</div>
+
+ <div class="mb-3">
+  <%= f.label :username, class: "form-label" %><br />
+  <%= f.text_field :username , class: "form-control"  %>
+</div>
 
   <div class="field">
     <%= f.label :email, class: "form-label"  %><br />
@@ -12,6 +25,11 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+
+    <div class="field">
+    <%= f.label :current_password, class: "form-label mt-3"  %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control"%>
+  </div>
 
   <div class="field">
     <%= f.label :password, class: "form-label mt-3"  %> <i>(leave blank if you don't want to change it)</i><br />
@@ -26,10 +44,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password, class: "form-label mt-3"  %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control"%>
-  </div>
+
 
   <div class="actions mt-3 mb-4">
     <%= f.submit "Update", class: "btn btn-primary" %>
@@ -40,5 +55,4 @@
 
 <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete,  class: 'btn btn-danger' , form: { style: "display: inline;" } %></div>
 
-<%= link_to "Back", :back%>
 </div>
