Recurring Donation Feature - In Progress

--- a/ruby/classwork/blog/app/javascript/donation.js.erb
+++ b/ruby/classwork/blog/app/javascript/donation.js.erb
@@ -26,6 +26,28 @@ document.addEventListener("DOMContentLoaded", () => {
         form.submit();
       }
     });
+
+    # This is vanilla JS
+
+    # const checkbox = document.getElementById('recurring-checkbox');
+    # const description = document.getElementById('recurring-description');
+
+    # checkbox.addEventListener('change', () => {
+    #   if (checkbox.checked) {
+    #     description.style.display = 'block';
+    #   } else {
+    #     description.style.display = 'none';
+    #   }
+    # });
+
+    $('#recurring-checkbox').on('change', function() {
+      if ($(this).is(':checked')) {
+        $('#recurring-description').show();
+      } else {
+        $('#recurring-description').hide();
+      }
+
+
   });
 
-  
+
