--- a/ruby/classwork/blog/app/views/articles/show.html.erb
+++ b/ruby/classwork/blog/app/views/articles/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for :javascript do %>
   <script type="module">
     import "add_jquery";
+    import "likes";
   </script>
   <% end %>
   
