--- a/ruby/classwork/blog/app/views/comments/_comment.html.erb
+++ b/ruby/classwork/blog/app/views/comments/_comment.html.erb
@@ -22,11 +22,13 @@
         <%= button_to "Delete", article_comment_path(@article, comment), method: :delete, class: "btn btn-danger btn-sm me-2" %>
         
         <!-- Like Button -->
-        <button class="btn btn-primary btn-sm like-btn me-2" data-comment-id="<%= comment.id %>">
-          Like <i class="fa-regular fa-thumbs-up"></i>
-        </button>
-        <span class="like-count me-1" id="like-count-<%= comment.id %>">0</span> 
-  <span>Likes</span>
+      <%= button_to 'Like', like_article_comment_path(@article, comment), method: :put, remote: true, class: "btn btn-primary btn-sm like-btn me-2", id: "like-btn-#{comment.id}" %>
+
+      <!-- Like Count -->
+      <span class="like-count me-1" id="like-count-<%= comment.id %>">
+        <%= comment.get_upvotes.size %>
+      </span>
+      <span>Likes</span>
       </div>
     </div>
   </div>
