--- a/ruby/classwork/blog/app/views/donations/new.html.erb
+++ b/ruby/classwork/blog/app/views/donations/new.html.erb
@@ -31,6 +31,12 @@
       </div>
     </div>
 
+    <div>
+    <%= form.label :recurring, "Make this a monthly donation." %>
+    <%= form.check_box :recurring, id: 'recurring-checkbox'  %>
+    <p id="recurring-description" style="display: none;"><em>Your card will be charged monthly.</em></p>
+  </div>
+
     <div class="d-grid gap-2">
       <%= form.submit "Donate", class: "btn btn-primary btn-lg" %>
     </div>
