--- a/ruby/classwork/blog/app/views/donations/new.html.erb
+++ b/ruby/classwork/blog/app/views/donations/new.html.erb
@@ -31,11 +31,11 @@
       </div>
     </div>
 
-   <!-- <div>
+    <div class="mb-4">
     <%= form.label :recurring, "Make this a monthly donation." %>
     <%= form.check_box :recurring, id: 'recurring-checkbox'  %>
     <p id="recurring-description" style="display: none;"><em>Your card will be charged monthly.</em></p>
-  </div> -->
+  </div> 
 
     <div class="d-grid gap-2">
       <%= form.submit "Donate", class: "btn btn-primary btn-lg" %>
