--- a/ruby/classwork/blog/app/views/comments/_comment.html.erb
+++ b/ruby/classwork/blog/app/views/comments/_comment.html.erb
@@ -20,11 +20,31 @@
       <div class="button-container d-flex align-items-center">
         <!-- Delete Button -->
         <%= button_to "Delete", article_comment_path(@article, comment), method: :delete, class: "btn btn-danger btn-sm me-2" %>
-        <!-- Like Button -->
-        <%= link_to like_article_comment_path(@article, comment), method: :put, remote: true, class: "btn btn-primary btn-sm like-btn me-2", id: "like-btn-#{comment.id}", data: { comment_id: comment.id } do %>
-        Like <i class="fa-regular fa-thumbs-up"></i>
-      <% end %>     <!-- Like Count -->
-      <span id="like-count-<%= comment.id %>"><%= comment.likes.count %></span> Likes
+ 
+        <% if user_signed_in? %>
+  <% like = current_user.likes.find_by(comment: comment) %>
+  
+  <% if like %>
+    <!-- Unlike button -->
+    <%= button_to "Unlike", article_comment_like_path(@article, comment, like), method: :delete, class: "btn btn-primary btn-sm me-1" %>
+  <% else %>
+    <!-- Like button -->
+    <%= button_to article_comment_likes_path(@article, comment), params: { like: { comment_id: comment.id } }, method: :post, class: "btn btn-primary btn-sm me-1" do %>
+      Like <i class="fa-regular fa-thumbs-up"></i> 
+    <% end %>   
+  <% end %>
+
+<% else %>
+  <!-- Like button for users not signed in -->
+  <%= button_to article_comment_likes_path(@article, comment), params: { like: { comment_id: comment.id } }, method: :post, class: "btn btn-primary btn-sm me-1", data: { toggle: "modal", target: "#loginModal" } do %>
+    Like <i class="fa-regular fa-thumbs-up"></i> 
+  <% end %>
+  
+<% end %>
+
+<!-- Display like count with singular/plural -->
+<%= pluralize(comment.likes.count, "Like") %>
+
       </div>
     </div>
   </div>
