--- a/ruby/classwork/blog/app/javascript/donation.js.erb
+++ b/ruby/classwork/blog/app/javascript/donation.js.erb
@@ -26,6 +26,13 @@ document.addEventListener("DOMContentLoaded", () => {
         form.submit();
       }
     });
+    
+// jQuery change handler for the recurring checkbox
+  $('#recurring-checkbox').on('change', function() {
+    if ($(this).is(':checked')) {
+      $('#recurring-description').show();
+    } else {
+      $('#recurring-description').hide();
+    }
   });
-
-  
+});
