--- a/ruby/classwork/blog/app/views/articles/show.html.erb
+++ b/ruby/classwork/blog/app/views/articles/show.html.erb
@@ -50,10 +50,10 @@
 
   
     <!-- Buttons Section -->
-    <div class="row mt-3">
+    <div class="row mt-3 mb-4">
       <div class="col-12 text-center">
         <button type="button" class="btn btn-primary btn-sm" id="toggle">Hide Content</button>
-        <%= link_to "Edit", edit_article_path(@article), class: "btn btn-secondary btn-sm" %>
+        <%= link_to "Edit", edit_article_path(@article), class: "btn btn-secondary btn-sm mx-1" %>
         <%= button_to "Delete", @article, redirect_to: @articles, method: :delete, class: "btn btn-danger btn-sm",  
                 form: { style: "display: inline;" }  %>
       </div>
